--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,15 @@ strong {font-size: 3.5rem;}
 .control .view-circle {background-color: #000;}
 .more-link {display: inline-block; background-color: #098488; height: 70px; line-height: 70px; padding: 0 72px; border-radius: 35px;}
 .more-link > span {font-weight: 700; font-size: 16px; color: #fff;}
-
+.sub-location {border-top: 1px solid #eee;}
+.sub-location .location > div {margin: 0 0 0 100px; font-size: 0;}
+.sub-location .location a {position: relative; line-height: 76px; font-size: 14px; margin: 0 18px 0 0; padding: 0 18px 0 0;}
+.sub-location .location a::after {content: ''; position: absolute; top: 4px; right: -3px; width: 8px; height: 14px; background: url('../images/sub/sub-location-arr.png') no-repeat;}
+.sub-location .location a:last-child {padding: 0;}
+.sub-location .location a:last-child::after {content: none;}
+.sub-location .location .point {position: relative; font-weight: 700; padding: 0 24px 0 0;}
+.sub-location .location .point::after {content: ''; position: absolute; top: 0; right: 0px; width: 20px; height: 20px; background: url('../images/sub/sub-location-circle-arr.png') no-repeat;}
+.sub-page-title .sub-desc {font-size: 36px; line-height: 76px; font-weight: 300; text-align: center;}
 /* 헤더 */
 .header {height: 10rem;}
 .header .user {position: relative; height: 34px;}
@@ -107,6 +115,9 @@ strong {font-size: 3.5rem;}
 .app .app-down {margin: 45px 0 0 0; font-size: 0;}
 .app .app-down .google-play {display: inline-block; width: 206px; height: 70px; background: url('../images/sprite.png') no-repeat 0 -236px; margin: 0 4px 0 0;}
 .app .app-down .app-store {display: inline-block; width: 206px; height: 70px; background: url('../images/sprite.png') no-repeat -216px -236px;}
+
+/* 서브 페이지 - 새롭게, */
+
 
 /* 푸터 */
 .footer {position: relative;}
