--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ strong {font-size: 3.5rem;}
 .sub-location .location .point::after {content: ''; position: absolute; top: 0; right: 0px; width: 20px; height: 20px; background: url('../images/sub/sub-location-circle-arr.png') no-repeat;}
 .sub-page-title .sub-desc {font-size: 36px; line-height: 76px; font-weight: 300; text-align: center;}
 .sub-banner {margin: 65px 0 0 0; background-color: #e5f6f6;}
-.sub-banner .banner {position: relative; width: 1012px; height: 400px; margin: 0 auto;}
+.sub-banner .banner {position: relative; width: 100%; max-width: 1012px; height: 400px; margin: 0 auto;}
 .sub-banner .bg {width: 238px; height: 479px; position: absolute; top: -79px; right: 0; background: url('../images/sub/sub-banner01.png') no-repeat;}
 .sub-banner .text-content {position: absolute; top: 50%; transform: translateY(-50%);}
 .sub-banner .text-content .sub-desc {font-size: 28px; font-weight: 300; margin: 0 0 20px 0;}
@@ -127,12 +127,12 @@ strong {font-size: 3.5rem;}
 
 /* 서브 페이지 - 새롭게, */
 .nhpoint-event .content {padding: 60px 0;}
-.nhpoint-event .event {width: 1012px; margin: 0 auto;}
+.nhpoint-event .event {width: 100%; max-width: 1012px; margin: 0 auto;}
 .nhpoint-event .content-center + .content-center {margin: 48px 0 0 0;}
 .nhpoint-event .point-set p {font-size: 28px; text-align: center; margin: 0 0 18px 0;}
 .nhpoint-event .point-set .point {color: #f15921;}
 .nhpoint-event .event-list::after {content: ''; display: block; clear: both;}
-.nhpoint-event .event-list .list {float: left; width: 490px; height: 386px; padding: 24px; box-sizing: border-box; text-align: center;}
+.nhpoint-event .event-list .list {float: left; width: 100%; max-width: 490px; height: 386px; padding: 24px; box-sizing: border-box; text-align: center;}
 .nhpoint-event .event-list .icon {display: inline-block; width: 150px; height: 150px;}
 .nhpoint-event .event-list .icon01 {background: url('../images/sub/sub-sprite.png') no-repeat 0 -520px;}
 .nhpoint-event .event-list .icon02 {background: url('../images/sub/sub-sprite.png') no-repeat -160px -520px;}
@@ -143,7 +143,7 @@ strong {font-size: 3.5rem;}
 .nhpoint-event .event-list .list-text {margin: 12px 0 0 0; font-size: 14px; line-height: 26px; font-weight: 300;}
 .nhpoint-event .event-list .list-point {font-weight: 700;}
 .nh-bers .content {padding: 70px 0;}
-.nh-bers .nh-bers-set {width: 1012px; margin: 0 auto;}
+.nh-bers .nh-bers-set {width: 100%; max-width: 1012px; margin: 0 auto;}
 .nh-bers .bers-list::after {content: ''; display: block; clear: both;}
 .nh-bers .bers-list .list {float: left; width: 245px; height: 224px; text-align: center;}
 .nh-bers .bers-list .list .icon {display: inline-block; width: 120px; height: 120px; vertical-align: top;}
@@ -186,4 +186,9 @@ strong {font-size: 3.5rem;}
     .app .mobile {float: none; width: 549px; margin: 0 auto; height: 769px; background: url('../images/app-mobile.png') no-repeat 0px 110px / 100% auto;}
     .app .text-box {float: none; display: block; text-align: center;}
     .app .text-box .table {height: auto; display: block;}
+
+    /* 서브 페이지 - 새롭게, */
+    .sub-banner .banner {padding: 0 40px; box-sizing: border-box;}
+    .nhpoint-event .event-list .list {width: 50%;}
+    .nh-bers .bers-list .list {width: calc(25% - 40px); padding: 0 20px;}
 }
