--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html {font-size: 13px;}
 body {font-size: 1rem;}
 
 /* 공통 */
+.wrap {position: relative;}
 .center {max-width: 94.1rem; margin: 0 auto; padding: 0 2.1rem;}
 .desc {font-size: 3.5rem; line-height: 4.9rem; font-weight: 300; letter-spacing: -1px;}
 .text {font-size: 1.076923rem; margin: 1.5rem 0 0 0; line-height: 1.8rem;}
@@ -31,8 +32,12 @@ strong {font-size: 3.5rem;}
 .sub-banner .text-content .sub-text {font-size: 16px; line-height: 26px; font-weight: 300;}
 .sub-content-title {margin: 0 0 56px 0; font-size: 24px; font-weight: 900; text-align: center; line-height: 100%;}
 
+/* 본문 페이지 */
+.main {padding-top: 130px;}
+.sub {padding-top: 130px;}
+
 /* 헤더 */
-.header {height: 10rem;}
+.header {position: absolute; top: 0; right: 0; left: 0; height: 10rem; overflow: hidden;}
 .header .user {position: relative; height: 34px;}
 .header .user > div {position: absolute; right: 0;}
 .header .user ul {float: left;}
@@ -46,12 +51,17 @@ strong {font-size: 3.5rem;}
 .header .gnb-content nav,
 .header .gnb-content nav li {float: left;}
 .header .gnb-content .logo {width: 190px; height: 30px; margin: 14px 100px 52px 100px; background: url('../images/sprite.png') no-repeat -0px 0px;}
-.header .gnb-content nav li {margin: 0 50px;}
-.header .gnb-content nav a {font-family: 'Noto Sans KR', sans-serif; font-size: 17px; font-weight: 700;}
-.header .gnb-content .gnb {margin: 16px 0 0 0;}
-.header .gnb-content .gnb::after {content: ''; display: block; clear: both;}
-.header .gnb-content .gnb-menu {display: none;}
-.header .gnb-content .search {position: absolute; right: 0; width: 26px; height: 24px; margin: 19px 0 0 0; background: url('../images/sprite.png') no-repeat -280px -5px;}
+.header .nav-bar .gnb {margin: 16px 0 0 0;}
+.header .nav-bar .gnb::after {content: ''; display: block; clear: both;}
+.header .nav-bar .gnb-list {position: relative; padding: 0 60px;}
+.header .nav-bar .gnb-link {font-family: 'Noto Sans KR', sans-serif; font-size: 17px; font-weight: 700;}
+.header .nav-bar .gnb-lnb {position: absolute; top: 100px; left: 0; width: 100%; z-index: 1;}
+.header .nav-bar .lnb-list {width: 100%; text-align: center;}
+.header .nav-bar .lnb-list a {display: inline-block; margin: 6px 0; padding: 6px 0; font-size: 15px;}
+.header .nav-bar .gnb-lnb03 {position: absolute; left: 90%; transform: translateX(-50%);}
+.header .nav-bar .lnb-list03 > a {float: left;}
+.header .nav-bar .lnb-list03 > div {text-align: left; margin-left: 60px;}
+.header .search {position: absolute; right: 0; width: 26px; height: 24px; margin: 19px 0 0 0; background: url('../images/sprite.png') no-repeat -280px -5px;}
 
 /* 비주얼 */
 .visual {position: relative; height: 598px;}
@@ -180,6 +190,9 @@ strong {font-size: 3.5rem;}
 .footer .refe .qr {width: 130px; height: 150px; background-position: -449px -136px;}
 
 @media all and (min-width: 1001px) and (max-width: 1097px) {
+    /* 헤더 */
+    .header .gnb-content .logo {margin: 14px 80px 52px 100px;}
+    
     /* NH멤버스 앱 다운로드 */
     .app {overflow: hidden; height: 1131px;}
     .app .bg {height: 783px;}
