--- a/css/tablet.css
+++ b/css/tablet.css
@@ -34,16 +34,19 @@ body {font-size: 1rem;}
 .renefits .nh-card img {position: static; top: 0; left: 0; display: block; margin: 0 auto;transform: none;}
 .renefits .nh-card ul {position: static; width: 264px; height: 192px; margin-top: 39px;}
 .renefits .nh-card li {position: relative; width: 247px; font-size: 18px; line-height: 48px; padding-left: 36px;}
-.renefits .nh-card li::after {content: ''; position: absolute; width: 20px; height: 20px; background: url('../images/sprite.png') -318px -60px; cursor: pointer;}
 .renefits .nh-card li br {display: none;}
 .renefits .nh-card .text01 {top: 0; left: 0; text-align: start; padding-right: 0;}
 .renefits .nh-card .text02 {top: 0; right: 0; text-align: start; padding-left: 36px;}
 .renefits .nh-card .text03 {bottom: 0; left: 0; text-align: start; padding-right: 0;}
 .renefits .nh-card .text04 {bottom: 0; right: 0; text-align: start; padding-left: 36px;}
-.renefits .nh-card .text01::after {top: 15px; left: 0;}
-.renefits .nh-card .text02::after {top: 15px; left: 0;}
-.renefits .nh-card .text03::after {top: 15px; left: 0;}
-.renefits .nh-card .text04::after {top: 15px; left: 0;}
+.renefits .nh-card .text01::before,
+.renefits .nh-card .text02::before,
+.renefits .nh-card .text03::before,
+.renefits .nh-card .text04::before {top: 16px; left: 2.5px;}
+.renefits .nh-card .text01::after,
+.renefits .nh-card .text02::after,
+.renefits .nh-card .text03::after,
+.renefits .nh-card .text04::after {top: 20.5px; left: 7.5px;}
 
 /* 이벤트 영역 */
 .main-event .desc {font-size: 32px; line-height: 46px; font-weight: 300; letter-spacing: -1px;}
